[WEEK015] Install Logstash with Docker